<resources>
    <string name="sintomatologia">Preguntas</string>
    <string name="P_malestar">¿Has presentado malestar o dolor de garganta?</string>
    <string name="P_fiebre">¿Has presentado fiebre igual o mayor a 38°C</string>
    <string name="P_respiraracion">¿Has presentado dificultad para respirar?</string>
    <string name="P_perdida">¿Has presentado pérdida del olfato y/o el gusto?</string>
    <string name="P_vivienda">¿Has viajado en los ultimos 14 días ?</string>
    <string name="P_contacto">¿Has tenido contacto con personas que hayan viajado a países con circulación activa de Covid-19?</string>
    <string name="P_cercanoPositivo">¿Ha estado por más de 15 minutos en contacto cercano con una persona que tenía síntomas de COVID-19  ?</string>
    <string name="boton_reportar">ENVIAR REPORTE</string>
</resources>